# challenge

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: cargo.yml  clippy.yml
.github/workflows/: cargo.yml  ci.yml
benches/: benchmark.rs  perf.rs
src/: client.rs  lib.rs  main.rs  processing.rs  types.rs
src/format/: csv.rs
src/format/csv/: input.rs  mod.rs  output.rs
src/model/: client.rs  event.rs  mod.rs  transaction.rs
src/parsing/: csv.rs  mod.rs
src/processing/: mod.rs  processor.rs
src/system/: mod.rs  processing.rs  processor.rs
tests/: integration_test.rs
